--- a/sfms/templates/layout.html
+++ b/sfms/templates/layout.html
@@ -23,7 +23,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
+              <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a>
             </div>
           </div>
         </div>
