ADD: usr logout

--- a/sfms/templates/layout.html
+++ b/sfms/templates/layout.html
@@ -22,7 +22,9 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a>
+                <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a>
+                <a class="nav-item nav-link" href="{{ url_for('files.files_view') }}">Files</a>
+                <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Log out</a>
             </div>
           </div>
         </div>
