--- a/sfms/templates/files.html
+++ b/sfms/templates/files.html
@@ -10,11 +10,18 @@
                 <p>creation date: {{ file.creation_date }}</p>
                 <p>Size: {{ file.size }}</p>
                 <p>Hash: {{ file.hash }}</p>
-                 <div>
-                    <form action="{{ url_for('files.delete_file', filename=file.title) }}" method="POST">
-                        <input class="btn btn-danger" type="submit" value="Delete">
-                    </form>
-                 </div>
+                <div class="row">
+                        <div class="col">
+                            <form action="{{ url_for('files.download_file', filename=file.title) }}" method="POST">
+                                <input class="btn btn-primary btn-block" type="submit" value="Download">
+                            </form>
+                        </div>
+                        <div class="col">
+                            <form action="{{ url_for('files.delete_file', filename=file.title) }}" method="POST">
+                                <input class="btn btn-danger btn-block" type="submit" value="Delete">
+                            </form>
+                        </div>
+                </div>
             </li>
             {% endfor %}
         </ul>
