--- a/sfms/templates/files.html
+++ b/sfms/templates/files.html
@@ -11,45 +11,61 @@
                 <p>Size: {{ file.size }}</p>
                 <p>Hash: {{ file.hash }}</p>
                 <div class="row">
-                        <div class="col">
-                            <form action="{{ url_for('files.download_file', filename=file.title) }}" method="POST">
-                                <input class="btn btn-primary btn-block" type="submit" value="Download">
-                            </form>
-                        </div>
-                        <div class="col">
-                            <form action="{{ url_for('files.delete_file', filename=file.title) }}" method="POST">
-                                <input class="btn btn-danger btn-block" type="submit" value="Delete">
-                            </form>
-                        </div>
+                    <div class="col">
+                        <form action="{{ url_for('files.download_file', filename=file.title) }}" method="POST">
+                            <input class="btn btn-primary btn-block" type="submit" value="Download">
+                        </form>
+                    </div>
+                    <div class="col">
+                        <form action="{{ url_for('files.delete_file', filename=file.title) }}" method="POST">
+                            <input class="btn btn-danger btn-block" type="submit" value="Delete">
+                        </form>
+                    </div>
                 </div>
             </li>
             {% endfor %}
         </ul>
-      </div>
-      <div class="col-md-6">
+    </div>
+    <div class="col-md-6">
         <form method="POST" enctype="multipart/form-data" action="">
             {{ form.csrf_token }}
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">{{ legend }}</legend>
-            <div class="form-group">
-                {{ form.file.label(class="form-control-label") }}
-                {% if form.file.errors %}
+                <div class="form-group">
+                    {{ form.file.label(class="form-control-label") }}
+                    {% if form.file.errors %}
                     {{ form.file(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
                         {% for error in form.file.errors %}
-                            <span>{{ error }}</span>
+                        <span>{{ error }}</span>
                         {% endfor %}
                     </div>
-                {% else %}
+                    {% else %}
                     {{ form.file(class="form-control form-control-lg") }}
-                {% endif %}
-            </div>
+                    {% endif %}
+                </div>
             </fieldset>
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
         </form>
-      </div>
     </div>
+</div>
+<div class="row">
+    <div class="col">
+        <form action="{{ url_for('files.files_view', page=prev_page) }}" method="POST">
+            {{ form.csrf_token }}
+            <input class="btn btn-primary btn-block" type="submit" value="Previous page">
+        </form>
+    </div>
+    <div class="col">
+        <form action="{{ url_for('files.files_view', page=next_page) }}" method="POST">
+            {{ form.csrf_token }}
+            <input class="btn btn-primary btn-block" type="submit" value="Next page">
+        </form>
+    </div>
+
+</div>
+<p></p>
 {% endblock content %}
